- fixed issue #528, hostname can contain "_" character